--- a/src/main/resources/static/css/basket.css
+++ b/src/main/resources/static/css/basket.css
@@ -34,7 +34,7 @@ img {
   font-size: 30px;
   font-weight: 400;
   text-align: left;
-  padding-left:250px;
+  padding-left:530px;
 }
 
 .cart li {
@@ -48,6 +48,7 @@ img {
  	text-align: center;
   	list-style-type: none;
   	position: absolute;
+  	padding-right:200px;
 }
 
 .cart ul :first-child {
