--- a/src/main/resources/templates/MAIN.html
+++ b/src/main/resources/templates/MAIN.html
@@ -3,8 +3,8 @@
 	<title>MAIN</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="stylesheet" href="/css/media.css">
+	<link rel="stylesheet" href="/css/MAIN.css">
+	<link rel="stylesheet" href="/css/MEDIA.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
 	<link rel="stylesheet"
