--- a/src/main/resources/templates/REGISTER.html
+++ b/src/main/resources/templates/REGISTER.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>회원가입 폼</title>
-        <link rel="stylesheet" href="/css/register.css">
+        <link rel="stylesheet" href="/css/REGISTER.css">
         
     </head>
     <body>
